--- a/tradeachair.html
+++ b/tradeachair.html
@@ -5,6 +5,9 @@
 </head>
 <body>
 <h1>Chair Trade</h1>
+<span>So you don't get very frustrated later (1st one sc and spuc) check out the</span>
+<a href="https://greensofa24.github.io/tradeachair/guide">Trade Guide</a>
+<br><br>
 
 <img src="https://res.cloudinary.com/dk-find-out/image/upload/q_80,w_1920,f_auto/Limestone-060-RD010-C-SH_by22j3.jpg" width="70">
 <span id=euc>0</span>
@@ -87,6 +90,31 @@ document.getElementById('b').innerText = parseInt(document.getElementById('b').i
 document.getElementById('c').innerText = parseInt(document.getElementById('c').innerText) - 3
 }">Trade</button>
 <p>Bench</p>
-
 </body>
 </html>
+
+<p>
+Trade guide
+<br>
+<br>5 Euc –> 1 Vuc
+<br>5 Vuc –> 1 Uc
+<br>5 Uc –> 1 Sc
+<br>10 Uc –> 1 Quc
+<br>
+<br>Key
+<br>
+<br>P: Painful
+<br>E: Extremely
+<br>V: Very
+<br>U: Uncomfortable
+<br>S: Stone
+<br>Sm: Smooth
+<br>Q: Quite
+<br>Cr: Crushable
+<br>Cl: Coloured
+<br>O: Office
+<br>
+<br>C: Chair
+<br>B: Bench
+<br>St: Stool
+</p>
