--- a/tradeachair.html
+++ b/tradeachair.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,6 +8,12 @@
 <h1>Chair Trade</h1>
 <span>So you don't get very frustrated later (1st one sc and spuc) check out the</span>
 <a href="https://greensofa24.github.io/tradeachair/guide">Trade Guide</a>
+<br><br>
+
+<button onclick="
+document.getElementById('euc').innerText = 0;
+document.getElementById('vuc').innerText = 0;
+">Prestige</button>
 <br><br>
 
 <img src="https://res.cloudinary.com/dk-find-out/image/upload/q_80,w_1920,f_auto/Limestone-060-RD010-C-SH_by22j3.jpg" width="70">
