--- a/tradeachair.html
+++ b/tradeachair.html
@@ -20,6 +20,7 @@ document.getElementById('euc').innerText = 0;
 document.getElementById('vuc').innerText = 0;
 progress = prestige;
 ub('vucub', 'vucbuy')
+ub('ucub', 'ucbuy')
 ">Prestige <span id=multi>(1x)</span></button>
 <br><br>
 
