--- a/tradeachair.html
+++ b/tradeachair.html
@@ -234,5 +234,10 @@ document.getElementById('t').innerText = parseInt(document.getElementById('t').i
 document.getElementById('gc').innerText = parseInt(document.getElementById('gc').innerText) - 5
 }">Trade</button>
 <p>Throne</p>
+
+<script>
+localStorage.setItem("euc", document.getElementById('euc').innerText);
+</script>
+
 </body>
 </html>
