--- a/tradeachair.html
+++ b/tradeachair.html
@@ -11,6 +11,7 @@
 <br><br>
 
 <script>
+document.getElementById('euc').innerText = localStorage.getItem("euc");
 var progress = 1;
 var prestige = 1;
 </script>
