--- a/tradeachair.html
+++ b/tradeachair.html
@@ -235,7 +235,23 @@ document.getElementById('gc').innerText = parseInt(document.getElementById('gc')
 }">Trade</button>
 <p>Throne</p>
 
-<button onclick="localStorage.setItem('euc', document.getElementById('euc').innerText)">Save</button>
+<button onclick="localStorage.setItem('euc', document.getElementById('euc').innerText);
+                 localStorage.setItem('vuc', document.getElementById('vuc').innerText);
+                 localStorage.setItem('uc', document.getElementById('uc').innerText);
+                 localStorage.setItem('sc', document.getElementById('sc').innerText);
+                 localStorage.setItem('spuc', document.getElementById('spuc').innerText);
+                 localStorage.setItem('alc', document.getElementById('alc').innerText);
+                 localStorage.setItem('brc', document.getElementById('brc').innerText);
+                 localStorage.setItem('quc', document.getElementById('quc').innerText);
+                 localStorage.setItem('stc', document.getElementById('stc').innerText);
+                 localStorage.setItem('c', document.getElementById('c').innerText);
+                 localStorage.setItem('brzc', document.getElementById('brzc').innerText);
+                 localStorage.setItem('b', document.getElementById('b').innerText);
+                 localStorage.setItem('cpc', document.getElementById('cpc').innerText);
+                 localStorage.setItem('slc', document.getElementById('slc').innerText);
+                 localStorage.setItem('ptc', document.getElementById('ptc').innerText);
+                 localStorage.setItem('gc', document.getElementById('gc').innerText);
+                 localStorage.setItem('t', document.getElementById('t').innerText)">Save</button>
 <button onclick="document.getElementById('euc').innerText = localStorage.getItem('euc')">Load</button>
 
 </body>
