--- a/tradeachair.html
+++ b/tradeachair.html
@@ -244,14 +244,12 @@ document.getElementById('gc').innerText = parseInt(document.getElementById('gc')
 <span id=mc>0</span>
 <p>Magic Chair</p>
 
-<button onclick="myFunction()">Cheat Code</button>
-
-<p id="demo"></p>
+<button onclick="cheat()">Cheat Code</button>
 
 <script>
 function myFunction() {
   let code = prompt("Enter your cheat code", "");
-  if (code == "daleMagicChair+5") {
+  if (code == "DaleMagicChair5") {
     document.getElementById("mc").innerText =
     5;
   }
