--- a/tradeachair.html
+++ b/tradeachair.html
@@ -247,7 +247,7 @@ document.getElementById('gc').innerText = parseInt(document.getElementById('gc')
 <button onclick="cheat()">Cheat Code</button>
 
 <script>
-function myFunction() {
+function cheat() {
   let code = prompt("Enter your cheat code", "");
   if (code == "DaleMagicChair5") {
     document.getElementById("mc").innerText =
