--- a/tradeachair.html
+++ b/tradeachair.html
@@ -67,13 +67,13 @@ if(parseInt(document.getElementById('euc').innerText) >= 10000){
 round = 2;
 document.getElementById('roundeuc').style.display = 'none';
 document.getElementById('euc').innerText = parseInt(document.getElementById('euc').innerText) - 10000
-}">Rounder Eucs (1000¢)</button>
+}">Rounder Eucs (1000euc)</button>
 <button id=roundvuc style="width: 13%" onmouseover="this.textContent = 'Vuc x2'" onmouseout="this.textContent = 'Smoother Vucs (5000vuc)'" onclick="
 if(parseInt(document.getElementById('vuc').innerText) >= 10000){
 round = 2;
 document.getElementById('roundvuc').style.display = 'none';
 document.getElementById('vuc').innerText = parseInt(document.getElementById('vuc').innerText) - 10000
-}">Smoother Vucs (5000¢)</button>
+}">Smoother Vucs (5000euc)</button>
 <br><br>
 
 <img src="https://res.cloudinary.com/dk-find-out/image/upload/q_80,w_1920,f_auto/Limestone-060-RD010-C-SH_by22j3.jpg" width="70">
