--- a/tradeachair.html
+++ b/tradeachair.html
@@ -11,7 +11,6 @@
 <br><br>
 
 <script>
-localStorage.setItem('a', 'a');
 var progress = 1;
 var prestige = 1;
 </script>
@@ -268,10 +267,10 @@ function cheat() {
     document.getElementById("mc").innerText =
     5;
   }
-  if (code == "200MoreEucForMe" && localStorage.getItem('a') == 'a') {
+  if (code == "200MoreEucForMe" && !localStorage.getItem('a') == 'a') {
     document.getElementById("euc").innerText =
     parseInt(document.getElementById("euc").innerText) + 200;
-    localStorage.setItem('a', 'b');
+    localStorage.setItem('a', 'a');
   }
 }
 </script>
