--- a/tradeachair.html
+++ b/tradeachair.html
@@ -267,10 +267,10 @@ function cheat() {
     document.getElementById("mc").innerText =
     5;
   }
-  if (code == "200MoreEucForMe" && !localStorage.getItem('a') == 'a') {
+  if (code == "200MoreEucForMe" && localStorage.getItem('a') == 'a') {
     document.getElementById("euc").innerText =
     parseInt(document.getElementById("euc").innerText) + 200;
-    localStorage.setItem('a', 'a');
+    localStorage.setItem('a', 'b');
   }
 }
 </script>
