--- a/tradeachair.html
+++ b/tradeachair.html
@@ -118,8 +118,7 @@ document.getElementById(b).style.display = 'none';
 if(parseInt(document.getElementById('euc').innerText) >= 3){
 document.getElementById('vuc').innerText = parseInt(document.getElementById('vuc').innerText) + progress * rvuc;
 document.getElementById('euc').innerText = parseInt(document.getElementById('euc').innerText) - 3
-}
-d -= 0.03">Trade</button>
+}">Trade</button>
 <button id="vucbuy" onclick="document.getElementById('vuc').innerText = parseInt(document.getElementById('vuc').innerText) + progress" style="display:none">Buy</button>
 <button id="vucub" onclick="
 if(parseInt(document.getElementById('euc').innerText) >= 200){
